--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <h2>How to delete your account:</h2>
   <ol>
-    <li>Open the app and go to <strong>Profile → Settings → Delete Account</strong>.</li>
+    <li>Open the app and go to <strong>Account → Account Settings → Delete Account</strong>.</li>
     <li>Confirm your choice to permanently delete your account.</li>
   </ol>
 
