--- a/index.html
+++ b/index.html
@@ -1,42 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Delete Account - [Your App Name]</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Account and Data Deletion – THE CUT Station</title>
+  <meta name="description" content="Account and data deletion instructions for YOUR APP NAME" />
   <style>
     body {
-      font-family: system-ui, sans-serif;
-      max-width: 700px;
+      font-family: Arial, Helvetica, sans-serif;
+      background-color: #f9f9f9;
+      color: #333;
+      margin: 0;
+      padding: 0;
+    }
+    .container {
+      max-width: 800px;
       margin: 40px auto;
-      padding: 20px;
+      background: #ffffff;
+      padding: 32px;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
+    }
+    h1 {
+      font-size: 26px;
+      margin-bottom: 16px;
+    }
+    h2 {
+      font-size: 20px;
+      margin-top: 28px;
+    }
+    p {
       line-height: 1.6;
     }
-    h1 { color: #333; }
-    h2 { color: #444; }
-    a { color: #007aff; }
+    ul {
+      margin-left: 20px;
+    }
+    li {
+      margin-bottom: 8px;
+    }
+    .footer {
+      margin-top: 40px;
+      padding-top: 16px;
+      border-top: 1px solid #e0e0e0;
+      font-size: 14px;
+      color: #666;
+    }
   </style>
 </head>
 <body>
-  <h1>Delete Your Account and Data</h1>
-  <p>Users of the <strong>[Your App Name]</strong> app can delete their account and all associated data directly within the app.</p>
+  <div class="container">
+    <h1>Account and Data Deletion – THE CUT Station</h1>
 
-  <h2>How to delete your account:</h2>
-  <ol>
-    <li>Open the app and go to <strong>Account → Account Settings → Delete Account</strong>.</li>
-    <li>Confirm your choice to permanently delete your account.</li>
-  </ol>
+    <p>
+      This page explains how users of <strong>THE CUT Station</strong> can request the deletion of their account and all associated personal data.
+    </p>
 
-  <h2>Data deleted:</h2>
-  <ul>
-    <li>User profile and authentication data</li>
-    <li>Appointment and check-in/out records</li>
-  </ul>
+    <h2>How to delete your account</h2>
+    <p>You can delete your account directly within the <strong>THE CUT Station</strong> app:</p>
+    <ul>
+      <li>Open the <strong>THE CUT Station</strong> app</li>
+      <li>Go to <strong>Account → Account Settings → Delete Account</strong></li>
+      <li>Confirm your choice to permanently delete your account</li>
+    </ul>
 
-  <h2>Data retained:</h2>
-  <p>Completed transactions or service records may be retained for up to 30 days for operational or legal purposes.</p>
+    <h2>Data that will be deleted</h2>
+    <ul>
+      <li>User profile information</li>
+      <li>Authentication and login data</li>
+      <li>Appointment and check-in / check-out records</li>
+    </ul>
 
-  <h2>Contact</h2>
-  <p>For any questions or issues, please contact us at <a href="mailto:support@yourapp.com">support@yourapp.com</a>.</p>
+    <h2>Data retention</h2>
+    <p>
+      Certain completed transaction or service records may be retained for up to <strong>30 days</strong> to comply with legal or operational requirements.
+    </p>
+
+    <h2>Developer information</h2>
+    <p>
+      <strong>App name:</strong> THE CUT Station<br />
+      <strong>Developer / Company:</strong> THE CUT Station<br />
+      <strong>Contact email:</strong> <a href="mailto:support@yourapp.com">thecutstation.appstore@gmail.com</a>
+    </p>
+
+    <div class="footer">
+      <p>Last updated: December 2025</p>
+    </div>
+  </div>
 </body>
 </html>
